# goit-python-web-hw-01

./: README.md  pyproject.toml  setup.py
documentation/: logo-credit.md  task-EN.md  task-UA.md
infinity/: README.md  m2_AddressBook.py  m5_Commands.py  m6_InputSanitizer.py  m7_InputParser.py  m8_CommandInvoker.py  m9_UserInterface.py  main.py
