[tool.poetry]
name = "infinity"
version = "0.1.0"
description = "command line program with addressbook and notetaking functions."
authors = ["II-777 <777dev0@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rich = "13.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
includes = ["README.md"]

[tool.poetry.scripts]
infinity = "infinity.main:main"
